--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,23 @@ appsalon_mvc.sql
 package.json
 package-lock.json
 .DS_Store
+/video
+*.mp4
+*.webm
+*.ogg
+/img
+*.png
+*.jpg
+*.gif
+*.svg
+*.ico
+*.webp
+*.avif
+*.jpeg
+*.bmp
+*.tiff
+*.tif
+*.psd
+*.ai
+*.eps
+*.pdf
